--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first website</title>
+    <title>First Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="messageContainer"></div>
     <script src="index.js"></script>
 </body>
 </html>
