--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Website</title>
+    <title>Real-time Chat Simulation (localStorage)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Chat Simulation</h1>
     <div id="messageContainer"></div>
+    <input type="text" id="messageInput" placeholder="Type a message..." />
+    <button onclick="sendMessage()">Send</button>
     <script src="index.js"></script>
 </body>
 </html>
