--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-time Chat Simulation (localStorage)</title>
+    <title>first website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Chat Simulation</h1>
-    <div id="messageContainer"></div>
-    <input type="text" id="messageInput" placeholder="Type a message..." />
-    <button onclick="sendMessage()">Send</button>
+    <!-- <h1 id="testh1"></h1>
+    <p id="testp"></p>
+    <p id="name"></p>
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <p id="p3"></p> -->
+
+    <h1 id="H1">Welcome</h1>
+
+    <label>Enter name:</label><br>
+    <input id="input"><br>
+    <label>Enter age:</label><br>
+    <input id="input2"><br>
+    <button id="button">Submit</button>
+
     <script src="index.js"></script>
 </body>
 </html>
